# vidscope

./: .gitignore  .importlinter  CLAUDE.md  LICENSE  README.md  pyproject.toml
.gsd/: DECISIONS.md  KNOWLEDGE.md  PROJECT.md  REQUIREMENTS.md  STATE.md
.gsd/milestones/M001/: M001-ROADMAP.md  M001-SUMMARY.md  M001-VALIDATION.md
.gsd/milestones/M002/: M002-ROADMAP.md  M002-SUMMARY.md  M002-VALIDATION.md
.gsd/milestones/M003/: M003-ROADMAP.md  M003-SUMMARY.md  M003-VALIDATION.md
.gsd/milestones/M004/: M004-ROADMAP.md  M004-SUMMARY.md  M004-VALIDATION.md
.gsd/milestones/M005/: M005-ROADMAP.md  M005-SUMMARY.md  M005-VALIDATION.md
.gsd/milestones/M006/: M006-ROADMAP.md
.gsd/milestones/M007/: M007-CONTEXT.md  M007-DISCUSSION-LOG.md  M007-RESEARCH.md  M007-REVIEW-FIX.md  M007-REVIEW.md  M007-ROADMAP.md  M007-VALIDATION.md  M007-VERIFICATION.md
.gsd/milestones/M008/: M008-RESEARCH.md  M008-REVIEW-FIX.md  M008-REVIEW.md  M008-ROADMAP.md  M008-VALIDATION.md  M008-VERIFICATION.md
.gsd/milestones/M009/: M009-CONTEXT.md  M009-DISCUSSION-LOG.md  M009-RESEARCH.md  M009-REVIEW.md  M009-ROADMAP.md  M009-S01-PLAN.md  M009-S01-SUMMARY.md  M009-S02-PLAN.md  M009-S02-SUMMARY.md  M009-S03-PLAN.md  M009-S03-SUMMARY.md  M009-S04-PLAN.md  M009-S04-SUMMARY.md  M009-VALIDATION.md  M009-VERIFICATION.md
.gsd/milestones/M010/: M010-RESEARCH.md  M010-ROADMAP.md  M010-S01-PLAN.md  M010-S01-SUMMARY.md  M010-S02-PLAN.md  M010-S02-SUMMARY.md  M010-S03-PLAN.md  M010-S03-SUMMARY.md  M010-S04-PLAN.md  M010-S04-SUMMARY.md  M010-VALIDATION.md  M010-VERIFICATION.md
.gsd/milestones/M011/: M011-RESEARCH.md  M011-REVIEW-FIX.md  M011-REVIEW.md  M011-ROADMAP.md  M011-S01-PLAN.md  M011-S01-SUMMARY.md  M011-S02-PLAN.md  M011-S02-SUMMARY.md  M011-S03-PLAN.md  M011-S03-SUMMARY.md  M011-S04-PLAN.md  M011-S04-SUMMARY.md  M011-VALIDATION.md  M011-VERIFICATION.md
.gsd/milestones/M012/: 03-REVIEW.md  M012-HOTFIX-XDT.md  M012-ROADMAP.md  M012-S01-PLAN.md  M012-S01-REVIEW.md  M012-S01-SUMMARY.md  M012-S01-VERIFICATION.md  M012-S02-PLAN.md  M012-S02-REVIEW.md  M012-S02-SUMMARY.md  M012-S02-VERIFICATION.md  M012-S03-CONTEXT.md  M012-S03-DISCUSSION-LOG.md  M012-S03-PLAN.md  M012-S03-SUMMARY.md  M012-S03-VERIFICATION.md
config/: taxonomy.yaml  vocabulary.yaml
docs/: analyzers.md  cookies.md  export-schema.v1.md  mcp.md  quickstart.md  watchlist.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
scripts/: backfill_creators.py  verify-m001.sh  verify-m002.sh  verify-m003.sh  verify-m004.sh  verify-m005.sh  verify-m006-s02.sh  verify-m006-s03.sh  verify-m011.sh  verify-s01.sh  verify-s02.sh  verify-s03.sh  verify-s04.sh  verify-s05.sh  verify-s07.sh
src/vidscope/: __init__.py  config.py
src/vidscope/adapters/: __init__.py  composite.py
src/vidscope/adapters/auth/: __init__.py  playwright_login.py
src/vidscope/adapters/config/: __init__.py  yaml_taxonomy.py  yaml_vocabulary.py
src/vidscope/adapters/export/: __init__.py  csv_exporter.py  json_exporter.py  markdown_exporter.py
src/vidscope/adapters/ffmpeg/: __init__.py  frame_extractor.py
src/vidscope/adapters/fs/: __init__.py  local_media_storage.py
src/vidscope/adapters/llm/: _base.py  (+6 more)
src/vidscope/application/: __init__.py  collection_library.py  cookies.py  cookies_validator.py  explain_analysis.py  export_library.py  get_creator.py  get_status.py  ingest_video.py  list_creator_videos.py  list_creators.py  list_links.py  list_trending.py  list_videos.py  refresh_stats.py  search_library.py  search_videos.py  set_video_tracking.py  show_video.py  suggest_related.py  tag_video.py  watchlist.py
src/vidscope/cli/: __init__.py  _support.py  app.py
src/vidscope/domain/: __init__.py  entities.py  errors.py  metrics.py  platform_detection.py  values.py
src/vidscope/infrastructure/: __init__.py  analyzer_registry.py  config.py  container.py  sqlite_engine.py  startup.py
src/vidscope/mcp/: __init__.py  server.py
src/vidscope/pipeline/: __init__.py  runner.py
src/vidscope/ports/: __init__.py  clock.py  exporter.py  link_extractor.py  ocr_engine.py  pipeline.py  repositories.py  stats_probe.py  storage.py  taxonomy_catalog.py  unit_of_work.py
tests/architecture/: test_layering.py
tests/fixtures/: analysis_golden.jsonl  link_corpus.json
tests/fixtures/vision/: generate_fixtures.py
tests/integration/: conftest.py  test_ingest_live.py  test_mcp_server.py
tests/integration/pipeline/: test_visual_intelligence_stage.py
tests/unit/application/: conftest.py  test_collection_use_cases.py  test_cookies.py  test_cookies_validator.py  test_explain_analysis.py  test_export_library.py  test_get_creator.py  test_get_status.py  test_ingest_video.py  test_list_creator_videos.py  test_list_creators.py  test_list_links.py  test_list_trending.py  test_pipeline_neutrality.py  test_refresh_stats.py  test_search_facets_matrix.py  test_search_library.py  test_search_sql_injection.py  test_search_videos.py  test_search_videos_m011.py  test_set_video_tracking.py  test_show_video.py  test_show_video_d05.py  test_suggest_related.py  test_tag_use_cases.py  test_watchlist.py
tests/unit/cli/: test_app.py  test_collections_cmd.py  test_cookies.py  test_creators.py  test_explain.py  test_export_cmd.py  test_links_cmd.py  test_review_cmd.py  test_search_cmd.py  test_search_cmd_m011.py  test_show_cmd.py  test_show_stats.py  test_stats.py  test_tags_cmd.py  test_trending.py  test_watch.py
tests/unit/domain/: test_entities.py  test_errors.py  test_metrics_property.py  test_platform_detection.py  test_tag_collection_entities.py  test_values.py  test_video_tracking.py
tests/unit/infrastructure/: test_analyzer_registry.py  test_config.py  test_container.py  test_startup.py
tests/unit/mcp/: test_frame_texts_tool.py  test_search_facets.py  test_server.py  test_server_creator.py  test_trending_tool.py
tests/unit/pipeline/: test_metadata_extract_stage.py  test_runner.py
tests/unit/ports/: test_ingest_outcome.py  test_ocr_engine.py  test_pipeline_creator_info.py  test_probe_result.py  test_protocols.py
tests/unit/scripts/: __init__.py  test_backfill_creators.py
(+380 files in other folders)
