[project]
name = "vidscope"
version = "0.1.0"
description = "Veille vidéo multi-sources : télécharge, transcrit, analyse et indexe des vidéos Instagram / TikTok / YouTube en local"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Johnjohnbei", email = "joaudran@gmail.com" },
]
keywords = ["video", "transcription", "whisper", "yt-dlp", "instagram", "tiktok", "youtube", "veille", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Linguistic",
]

# Runtime dependencies are declared in M001/S01 once the socle lands.
dependencies = []

[project.optional-dependencies]
dev = []

[project.scripts]
vidscope = "vidscope.cli:app"

[project.urls]
Homepage = "https://github.com/Johnjohnbei/vidscope"
Repository = "https://github.com/Johnjohnbei/vidscope"
Issues = "https://github.com/Johnjohnbei/vidscope/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vidscope"]
